--- a/mvvm.html
+++ b/mvvm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="app">
-		<input type="text" id="a" v-model="input">
+		<input type="text" id="a" v-model="text">
 		{{text}}
 	</div>
 </body>
@@ -30,6 +30,8 @@
 	//node 为节点
 	function compile(node, vm){
 		var reg = /\{\{(.*)\}\}/;
+		console.log(node)
+		console.log(node.nodeType)
 		//节点类型为元素
 		if (node.nodeType === 1) {
 			var attr = node.attributes; //获取属性
@@ -52,7 +54,8 @@
 			if (reg.test(node.nodeValue)) {
 				var name = RegExp.$1; //获取匹配的字符串**
 				name = name.trim() //去掉空格
-				node.nodeValue = vm.data[name] //将vm中的data的值赋给该node
+				//node.nodeValue = vm.data[name] //将vm中的data的值赋给该node
+				new Watcher(vm, node, name)
 			}
 		}
 	}
@@ -66,15 +69,19 @@
 
 	 function defineReactive(obj, key, val){
 	 	observer(val)
+	 	var dep = new Dep()
 	 	Object.defineProperty(obj, key, {
 	 		enumerable: true, //可枚举
 	 		configurable: false, // 不能够在define
 	 		get: function(){
+	 			// 只有在页面获取数据时候才会把观察者添加到dep中，
+	 			if (Dep.target) dep.addSubs(Dep.target)
 	 			return val
 	 		},
 	 		set: function(newValue){
 	 			if (newValue === val) return
 	 			val = newValue
+	 			dep.notify()
 	 			console.log(val)
 	 		}
 	 	})
@@ -88,6 +95,50 @@
 	 	})
 	 }
 
+	//定义一个容器,用来存放订阅者
+	function Dep(){
+		this.subs = []
+	}
+	Dep.prototype = {
+		addSubs: function(sub){
+			this.subs.push(sub)
+		},
+		notify:function(){
+			this.subs.forEach(function(sub){
+				sub.update()
+			})
+		}
+	}
+
+	/**
+	 * 相当于watcher
+	 */
+
+	function Watcher (vm, node, name){
+		Dep.target = this //将自己赋值给一个全局变量Dep.target
+		this.name = name
+		this.node = node
+		this.vm = vm
+		this.update()
+		Dep.target = null //执行完后把Dep.target赋值为null,保证只有一个Dep.target
+	}
+
+	Watcher.prototype = {
+		update: function(){
+			this.get()
+			this.node.nodeValue = this.value
+		},
+		// 获取data中的属性值
+		get: function(){
+			this.value = this.vm[this.name] // 触发相应属性的get
+		}
+	}
+
+
+
+	/**
+	 * 相当于mvvm,所有文件的主入口
+	 */
 
 	function Vue(options){
 		this.data = options.data;
@@ -101,7 +152,8 @@
 		el: 'app',
 		data: {
 			text: 'hello world',
-			input: '请输入文字'
+			input: '请输入文字',
+			test: '测试数据'
 		}
 	})
 </script>
