--- a/index.html
+++ b/index.html
@@ -2,28 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>vue-simple-scource-code</title>
+	<script src="compile.js"></script>
 </head>
 <body>
-	<input type="text" name="" id="i-msg">
-	<span id="text"></span>
+	<div id="app">
+		<input type="text" name="" id="i-msg" v-model="msg">
+		{{msg}}
+	</div>
 </body>
 </html>
-
 <script type="text/javascript">
-	var data = {}
-	Object.defineProperty(data, 'test', {
-		enumerable: true, //可枚举
-		configurable: false, //不可从新define
-		get: function(){
-			return val
-		},
-		set: function(newvale){
-			document.getElementById('i-msg').value = newvale
-			document.getElementById('text').innerHTML = newvale
+	var vm = new Vue({
+		el: 'app',
+		data: {
+			msg: 'hello'
 		}
-	})
-	document.addEventListener('keyup', function(e){
-		data.test = e.target.value; //触发data中set函数
 	})
 </script>
