--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>vue-simple-scource-code</title>
+	<script src="observer.js"></script>
+	<script src="watcher.js"></script>
 	<script src="compile.js"></script>
 </head>
 <body>
